updating resume and fixing top right resume to direct to resume

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<ul>
 							<li><a href="https://www.linkedin.com/in/shabir-zahir" class="icon brands alt fa-linkedin-in" >Linkedin</a></li>
 							<li><a href="https://github.com/ShabirZ" class = "icon brands alt fa-github">Github</a></li>
-							<li><a href="https://www.linkedin.com/in/shabir-zahir">Resume</a></li>
+							<li><a href="shabir_zahir_september_2025_v2.pdf">Resume</a></li>
 							
 							
 						</ul>
