updating button to say click me instead to view resume

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 						<form onsubmit="window.open('shabir_zahir_september_2025.pdf', '_blank'); return false;" class="cta" style="text-align: center;">
 							<div class="row gtr-uniform gtr-50">
 								<div class="col-4 col-12-xsmall" style="margin: 0 auto;">
-								<input type="submit" value="Get Started" class="fit primary" />
+								<input type="submit" value="Click Me!" class="fit primary" />
 								</div>
 							</div>
 						</form>
